# Better-Fangame

./: CMakeLists.txt
src/: main.c
